--- a/src/nav/main-top-header/Header.css
+++ b/src/nav/main-top-header/Header.css
@@ -3,12 +3,15 @@
 * {margin: 0; padding: 0;}
 
 /* Layout */
-#main-tap-header {width: 100%; min-width: 1280px; position: absolute; top: 0; margin: 0 auto; z-index: 4; background-color: #41b6e6;}
+#main-tab-header-layout {position: relative; height: 80px;  background-color: #41b6e6;}
+
+/* header */
+.main-tap-header {position: absolute; width: 100%; min-width: 1280px; top: 0; margin: 0 auto; z-index: 4; background-color: #41b6e6;}
 
 /* tap-top */
 .main-tap-top {width: 100%; height: 70px; display: table;}
-.main-tap-top .tap-top-left {display: table-cell; width: 20%; padding-left: 30px; vertical-align: baseline;}
-.main-tap-top .tap-top-middle {display: table-cell; width: 55%; padding-left: 20px; text-align: center; vertical-align: baseline; letter-spacing: -.3px; font-size: 20px; font-family: Noto Sans CJK KR Regular; color: #fff;}
+.main-tap-top .tap-top-left {position: relative; top: -10px; display: table-cell; width: 20%; padding-left: 30px;}
+.main-tap-top .tap-top-middle {position: relative; top: -10px; display: table-cell; width: 55%; padding-left: 20px; text-align: center; letter-spacing: -.3px; font-size: 20px; font-family: Noto Sans CJK KR Regular; color: #fff;}
 .main-tap-top .tap-top-right {float: right; width: 290px;}
 
 .tap-top-left .icon-menu {cursor: pointer; width: 25px; height: 21px;}
@@ -27,7 +30,7 @@
 
 
 /* tap-nav */
-.main-tap-nav {display: none;}
+.main-tap-nav {overflow: hidden; height: 0;}
 
 @font-face {
   font-family: "Noto Sans CJK KR Regular";
