--- a/src/basket/Basket.css
+++ b/src/basket/Basket.css
@@ -14,6 +14,37 @@
     text-align: center;
     line-height: 42px;
 }
+.basket_layout .basket_item {
+    width: 100%;
+}
+.basket_layout .basket_item .order_basket_list_header {
+    height: 64px;
+    width: 100%;
+    line-height: 64px;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    font-size: 16px;
+    color: #666;
+    text-align: center;
+}
+.basket_layout .basket_item .order_basket_list_header .order_basket_list_menu{
+    width: 703px;
+}
+.basket_layout .basket_item .order_basket_list_header .order_basket_list_count{
+    width: 140px;
+}
+.basket_layout .basket_item .order_basket_list_header .order_basket_list_price{
+    -webkit-box-flex: 1;
+    flex: 1;
+}
+.basket_layout .basket_item .order_basket_list_header .order_basket_list_change{
+    width: 90px;
+}
 .basket_layout .bottom {
     width: 1200px;
     background-color: #ffffff;
@@ -57,6 +88,144 @@
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+}
+.basket_layout .basket_item .order_basket_item {
+    height: 240px;
+    width: 100%;
+    padding: 20px 30px;
+    border-bottom: 1px solid #e5e5e5;
+    position: relative;
+}
+.order_basket_item .basket_toolbar {
+    z-index: 1;
+    position: absolute;
+    top: calc(50% - 15px);
+    right: 37px;
+    text-align: right;
+}
+.order_basket_item .basket_toolbar .x_button {
+    cursor: pointer;
+    position: relative;
+    right: -10px;
+    height: 30px;
+    width: 30px;
+}
+.order_basket_item .basket_body {
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    position: relative;
+}
+.order_basket_item .basket_body .body_image_area {
+    width: 200px;
+    height: 200px;
+    background-color: #fff;
+    position: relative;
+}
+.order_basket_item .basket_body .body_image_area .basket_item_image {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 200px;
+    height: 200px;
+}
+.order_basket_item .basket_body .body_left_area {
+    margin-left: 40px;
+    width: 553px;
+}
+.order_basket_item .basket_body .body_left_area .menu_name{
+    font-size: 18px;
+    color: #222;
+    margin-top: 24px;
+}
+.order_basket_item .basket_body .body_right_area {
+    width: 140px;
+    position: absolute;
+    top: calc(50% - 20px);
+    left: 674px;
+}
+.order_basket_item .basket_body .body_right_area .number_picker_outer {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+}
+.order_basket_item .basket_body .body_right_area .number_picker_outer .number_picker {
+    text-align: center;
+    width: 140px;
+    height: 40px;
+    line-height: 40px;
+}
+.order_basket_item .basket_body .body_right_area .number_picker_outer .number_picker .minus {
+    float: left;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+}
+.order_basket_item .basket_body .body_right_area .number_picker_outer .number_picker .plus {
+    float: right;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+}
+.order_basket_item .basket_body .body_right_area .number_picker_outer .number_picker .number_count {
+    vertical-align: middle;
+    font-size: 22px;
+    line-height: 40px;
+    display: inline-block;
+    font-weight: 700;
+}
+.order_basket_item .basket_footer {
+    position: relative;
+}
+.order_basket_item .basket_footer .footer_left {
+    position: absolute;
+    top: -60px;
+    left: 240px;
+    line-height: 38px;
+    height: 100%;
+}
+.order_basket_item .basket_footer .footer_left .change_option_button {
+    background: #41b6e6;
+    height: 38px;
+    line-height: 38px;
+    width: 96px;
+    font-size: 16px;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}
+.order_basket_item .basket_footer .footer_center {
+    position: absolute;
+    top: -108px;
+    right: 170px;
+    padding-right: 10px;
+    height: 100%;
+    text-align: right;
+}
+.order_basket_item .basket_footer .footer_center .price {
+    font-size: 18px;
+    color: #222;
+}
+.order_basket_item .basket_footer .footer_right {
+    position: absolute;
+    top: -119px;
+    right: 57px;
+    height: 100%;
+}
+.order_basket_item .basket_footer .footer_right .change_save_button {
+    cursor: no-drop;
+    background: #cbcbcb;
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    font-size: 16px;
     display: inline-block;
     text-align: center;
     color: #fff;
