--- a/src/pizzapage/component/PizzaTable.css
+++ b/src/pizzapage/component/PizzaTable.css
@@ -1,11 +1,8 @@
 .pizza-card-form {
     display: flex;
     justify-content: space-between;
-}
-.pizza-menu-card {
-    background-color: #ccc;
-    width: 500px;
-    height: 240px;
+    width: 1200px;
+    min-width: 1200px;
 }
 .container {
     display: flex;
@@ -18,4 +15,18 @@
     font-weight: bold;
     font-size: 18px;
     margin-top: 30px;
+}
+.pizza-menu-item{
+    margin-top: 40px;
+    position: relative;
+    display: inline-block;
+}
+.container{
+    position: relative;
+    width: 590px;
+    height: 240px;
+    background: #fff;
+}
+.pizza-menu-card :nth-child(2){
+    margin-left: 20px;
 }
