--- a/src/pizzapage/component/PizzaTable.css
+++ b/src/pizzapage/component/PizzaTable.css
@@ -1,11 +1,8 @@
 .pizza-card-form {
     display: flex;
     justify-content: space-between;
-}
-.pizza-menu-card {
-    background-color: #ccc;
-    width: 500px;
-    height: 240px;
+    width: 1200px;
+    min-width: 1200px;
 }
 .container {
     display: flex;
@@ -18,4 +15,66 @@
     font-weight: bold;
     font-size: 18px;
     margin-top: 30px;
+}
+.pizza-menu-item{
+    margin-top: 40px;
+    position: relative;
+    display: inline-block;
+}
+.container{
+    position: relative;
+    width: 590px;
+    height: 240px;
+    background: #fff;
+}
+.pizza-menu-item :nth-child(2){
+    margin-left: 20px;
+}
+.click-active-shadow-box{
+    position: absolute;
+    right: 0px;
+    top: 0;
+    opacity: 0;
+    width: 590px;
+    height: 240px;
+    background-color: rgba(0,0,0,.8);
+    box-shadow: 13.4px 13.4px 16px 0 rgba(53,48,48,.17);
+}
+.inner-container{
+    cursor: pointer;
+    margin-top: 15px;
+}
+.inner-container > img{
+    vertical-align: middle;
+    width: 22px;
+    height: 23px;
+    margin-right: 8px;
+}
+.view-button{
+    display: inline-block;
+    width: 155px;
+    height: 55px;
+    border-radius: 50px;
+    font-size: 18px;
+    color: #41b6e6;
+    border: 2px solid #41b6e6;
+    margin-right: 30px;
+    margin-left: 125px;
+    text-align: center;
+    margin-top: 93px;
+}
+.basket-button{
+    display: inline-block;
+    width: 155px;
+    height: 55px;
+    border-radius: 50px;
+    font-size: 18px;
+    color: #41b6e6;
+    border: 2px solid #41b6e6;
+    text-align: center;
+    margin-top: 93px;
+}
+.click-active-shadow-box:hover{
+    z-index: 3;
+    opacity: 1;
 }
