장바구니 주문, 메뉴별 리뷰보기 완

--- a/src/review/Review.css
+++ b/src/review/Review.css
@@ -22,6 +22,8 @@
 }
 .review_header .review_menu .menu_image {
     margin: 20px;
+    object-fit: cover;
+    max-width: 600px;
 }
 .review_header .review_menu .menu_info_area{
     margin: 20px;
